Remove Customer.java