@@ -2,13 +2,11 @@ package com.soveldaja.kassa.service;
 
 import com.soveldaja.kassa.dto.OrderDTO;
 import com.soveldaja.kassa.dto.OrderItemDTO;
-import com.soveldaja.kassa.entity.Customer;
 import com.soveldaja.kassa.entity.Order;
 import com.soveldaja.kassa.entity.OrderItem;
-import com.soveldaja.kassa.repository.CustomerRepository;
 import com.soveldaja.kassa.repository.OrderItemRepository;
 import com.soveldaja.kassa.repository.OrderRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,37 +15,20 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class OrderService {
 
     private final OrderRepository orderRepository;
     private final OrderItemRepository orderItemRepository;
-    private final CustomerRepository customerRepository;
-
-
-    @Autowired
-    public OrderService(OrderRepository orderRepository, OrderItemRepository orderItemRepository, CustomerRepository customerRepository) {
-        this.orderRepository = orderRepository;
-        this.orderItemRepository = orderItemRepository;
-        this.customerRepository = customerRepository;
-    }
 
 
     public List<OrderDTO> getAllOrders(String status, String customerId) {
         List<Order> orders = orderRepository.findAll();
 
-        // Filter by status if provided
         if (status != null && !status.isEmpty()) {
             orders = orders.stream()
                     .filter(order -> status.equals(order.getStatus()))
-                    .collect(Collectors.toList());
-        }
-
-        // Filter by customerId if provided
-        if (customerId != null && !customerId.isEmpty()) {
-            orders = orders.stream()
-                    .filter(order -> order.getCustomer() != null &&
-                            customerId.equals(order.getCustomer().getId().toString()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         return orders.stream()
@@ -65,18 +46,20 @@ public class OrderService {
 
     @Transactional
     public OrderDTO createOrder(OrderDTO orderDTO) {
-        Customer customer = customerRepository.findById(Long.parseLong(orderDTO.getCustomerId()))
-                .orElseThrow(() -> new RuntimeException("Customer not found with id: " + orderDTO.getCustomerId()));
-
         Order order = new Order();
-        order.setCustomer(customer);
         order.setTotal(orderDTO.getTotal());
         order.setCreatedBy(orderDTO.getCreatedBy());
         order.setStatus(orderDTO.getStatus());
         order.setDescription(orderDTO.getDescription());
 
         Order savedOrder = orderRepository.save(order);
+        createOrderItems(orderDTO, savedOrder);
 
+        return convertToDTO(savedOrder);
+    }
+
+
+    private void createOrderItems(OrderDTO orderDTO, Order savedOrder) {
         List<OrderItem> orderItems = new ArrayList<>();
         for (OrderItemDTO itemDTO : orderDTO.getItems()) {
             OrderItem item = new OrderItem();
@@ -88,8 +71,6 @@ public class OrderService {
 
         orderItemRepository.saveAll(orderItems);
         savedOrder.setItems(orderItems);
-
-        return convertToDTO(savedOrder);
     }
 
 
@@ -98,10 +79,6 @@ public class OrderService {
         Order order = orderRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Order not found with id: " + id));
 
-        Customer customer = customerRepository.findById(Long.parseLong(orderDTO.getCustomerId()))
-                .orElseThrow(() -> new RuntimeException("Customer not found with id: " + orderDTO.getCustomerId()));
-
-        order.setCustomer(customer);
         order.setTotal(orderDTO.getTotal());
         order.setCreatedBy(orderDTO.getCreatedBy());
         order.setStatus(orderDTO.getStatus());
@@ -112,17 +89,7 @@ public class OrderService {
         order.getItems().clear();
 
         // Add new items
-        List<OrderItem> orderItems = new ArrayList<>();
-        for (OrderItemDTO itemDTO : orderDTO.getItems()) {
-            OrderItem item = new OrderItem();
-            item.setOrder(order);
-            item.setProductId(itemDTO.getProductId());
-            item.setQuantity(itemDTO.getQuantity());
-            orderItems.add(item);
-        }
-
-        orderItemRepository.saveAll(orderItems);
-        order.setItems(orderItems);
+        createOrderItems(orderDTO, order);
 
         Order updatedOrder = orderRepository.save(order);
         return convertToDTO(updatedOrder);
@@ -141,7 +108,6 @@ public class OrderService {
 
         return new OrderDTO(
                 order.getId().toString(),
-                order.getCustomer().getId().toString(),
                 itemDTOs,
                 order.getTotal(),
                 order.getCreatedAt(),
